<resources>
    <string name="app_name">Dice Roller</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="predefined">Predefined</string>
    <string name="custom">Custom</string>
    <string name="red">R :</string>
    <string name="green">G :</string>
    <string name="blue">B :</string>
    <string name="timerLabel">Timer</string>
    <string name="rollLabel">Roll</string>
    <string name="stopLabel">Stop Roll</string>
    <string name="shortLabel">Short</string>
    <string name="mediumLabel">Medium</string>
    <string name="longLabel">Long</string>
    <string name="oneDiceLabel">One</string>
    <string name="twoDiceLabel">Two</string>
    <string name="threeDiceLabel">Three</string>
    <string name="fourDiceLabel">Four</string>
    <string name="fiveDiceLabel">Five</string>
    <string name="colorLabel">Color</string>
    <string name="aboutUsLabel">About Us</string>
    <string name="createdForLabel">Created For:</string>
    <string name="nameLabel">Your Name</string>
    <string name="datedLabel">On 9 20 2000</string>
    <string name="projDetLabel">Mobile Application Development 4550</string>
    <string-array name="colorsList">
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Cyan</item>
        <item>Yellow</item>
        <item>Magenta</item>
    </string-array>
</resources>