<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".aboutActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@android:color/holo_red_dark"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createdForLabel"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textSize="25sp" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/holo_red_dark"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nameLabel"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/projDetLabel"
        android:gravity="center_horizontal"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/datedLabel"
        android:gravity="center_horizontal"
        android:textSize="18sp" />

<!--    <TextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_margin="15dp"-->
<!--        android:textSize="15dp"-->
<!--        android:text="Lorem Ipsum" />-->

</LinearLayout>